# tree-sitter-colors

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-colors.pc.in  tree-sitter-nvimcolors.pc.in
bindings/c/tree_sitter/: tree-sitter-nvimcolors.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_colors/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterColors/: colors.h
bindings/swift/TreeSitterColorsTests/: TreeSitterColorsTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: css_function_color.txt  css_function_hsl.txt  css_function_hsla.txt  css_function_hwb.txt  css_function_lab.txt  css_function_lch.txt  css_function_oklab.txt  css_function_oklch.txt  css_function_rgb.txt  css_function_rgba.txt  css_hex_color.txt  css_keyword_transparent.txt  css_named_color.txt  css_percentage.txt  non_color.txt  tailwindcss_color.txt  tailwindcss_color_classname.txt  tailwindcss_color_css_variable.txt  u32_argb.txt
